# OpenSSD-OpenChannelSSD

./: .gitignore  README.md
CosmosPlus/2025.1/Micron_NAND/: cosm-plus-sys.xpr
CosmosPlus/2025.1/Micron_NAND/ws/_ide/: .peers.ini  .vitisPlatformRepo.json  version.ini  workspace_journal.py  workspace_journal_35920.py
CosmosPlus/2025.1/Micron_NAND/ws/cosmosplus/: vitis-comp.json
CosmosPlus/2025.1/Micron_NAND/ws/run-gftl3/: compile_commands.json  ftl_config.h  vitis-comp.json
DaisyPlus/2025.1/Micron_NAND/: cosm-plus-sys.xpr
DaisyPlus/2025.1/Micron_NAND/PS_LPDDR4_A/: cosm-plus-sys.xpr
DaisyPlus/2025.1/Micron_NAND/PS_LPDDR4_B/: cosm-plus-sys.xpr
DaisyPlus/2025.1/Micron_NAND/PS_LPDDR4_B/ws2/: ftl.bif
DaisyPlus/2025.1/Micron_NAND/ws/_ide/: .vitisPlatformRepo.json  version.ini  workspace_journal.py  workspace_journal_106116.py
DaisyPlus/DOC/: openssd_wop_wrapper_stub.md  wop_gpu_protocol.md  wop_pbs_openssd_integration_plan.md  wop_storage_plan.md  wop_validation_plan.md
DaisyPlus/GPU/wop_runtime/: CMakeLists.txt  README.md  main.cpp  test_stub.sh  wop_gpu_kernels.cu  wop_gpu_runtime.cpp  wop_gpu_runtime.hpp
DaisyPlus/GPU/wop_runtime/tests/: io_access.h  io_access_stub.c  test_dram_image.hpp  test_gr3ftl_gpu_loop.cpp  test_ring_runtime.cpp  wop_command_test_stubs.c  wop_test_shim.h  xil_printf.h  xparameters.h
DaisyPlus/OpenSSD/Micron_NAND/daisyplus_openssd_micron_4c2w_ns/: build_wop.tcl  export_bd.tcl  vivado.jou
DaisyPlus/OpenSSD/Micron_NAND/daisyplus_openssd_micron_4c2w_ns/cosm-plus-sys-2019/: build_wop_2019_generated.tcl  cosm_plus_sys_2019.xpr
(+1562 files in other folders)
